FreedomSanboxAntDeploy/src/objects/Product_Default_Allocation__c.object
<CustomObject>
    <description>Used to store Partner and Biz unit related products</description>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipName>Default_Product_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomUniqueKey__c</fullName>
        <label>Partner/Biz Unit - Sequence No</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Emergency Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marriage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parental Responsibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money to Heirs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investment_Type__c</fullName>
        <label>Investment Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Range__c</fullName>
        <label>Maximum Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Range__c</fullName>
        <label>Minimum Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Default Allocations</relationshipLabel>
        <relationshipName>Default_Product_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Product Default Allocations</relationshipLabel>
        <relationshipName>Default_Product_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ratio__c</fullName>
        <label>Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Profile__c</fullName>
        <label>Risk Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Aggressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately Aggressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately Conservative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SequenceUniqueKey__c</fullName>
        <label>Partner/Biz Unit - Sequence No</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Default Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asset_Class__c</columns>
        <columns>Investment_Type__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Partner__c</columns>
        <columns>Product__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Default Allocations</pluralLabel>
    <recordTypes>
        <fullName>Basket_Product</fullName>
        <active>true</active>
        <label>Basket Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Unit_Products</fullName>
        <active>true</active>
        <label>Business Unit Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Products</fullName>
        <active>true</active>
        <label>Partner Products</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>